--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h1>RGCET</h1>
         <h1>INTERNAL HACKATHON</h1>
         <h2>Duration: 2 hours</h2>
+        <p>Do not use ChatGPT and YouTube</p>
         <button onclick="window.location.href='https://www.hackerrank.com/internal-hackathon-1725156534'">Go to Link</button>
     </div>
 </body>
